# project-utils

./: .env.example  .gitignore  README.md  example_usage.py  pyproject.toml  setup.py  verify_config.py
build_utils/: autopep.py  build_docker.py  file_collate.py
project_utils/: __init__.py  config.py  encoded.config.json
project_utils/build_utils/: create_config.py
project_utils/setup_master/: master.py
project_utils/utils/ai/: ai_driver.py  ai_enums.py
project_utils/utils/config/: config.py
project_utils/utils/database/: database_driver.py  database_functions.py
project_utils/utils/logging/: __init__.py  logging_config.py
project_utils/utils/secrets/: secrets.py
setup_example_code/: test.py
setup_master/: master.py
utils/ai/: ai_basemodels.py  ai_enums.py
