[project]
name = "project-utils"
version = "0.1.0"
description = "Shared utilities for database, AI, configuration and security operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Thomas Tiotto", email = "thomas.tiotto@kyndryl.com" }
]
keywords = ["utils", "database", "ai", "config", "security", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "autopep8",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.38",
    "cryptography>=3.4.0",
    "passlib>=1.7.4",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "loguru>=0.6.0",
    "ollama",
    "boto3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/TheAgenticDream/project-utils"
Repository = "https://github.com/TheAgenticDream/project-utils.git"
Issues = "https://github.com/TheAgenticDream/project-utils/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "project_utils/**/*.py",
    "project_utils/**/*.json",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long, handled by formatter

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
